--- a/src/app/ui-components/input-todo/input-todo.component.scss
+++ b/src/app/ui-components/input-todo/input-todo.component.scss
@@ -5,6 +5,7 @@
         border: none;
         font-size: $font-size;
         font-family: Helvetica;
+        margin-top: -5px;
     }
 
     .text-input:focus {
